# ergodic-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: README.md  config.yaml
src/ergodic/: __init__.py  cli.py  pipeline.py  prompts.py
src/ergodic/sources/: __init__.py  arxiv.py  crossref.py  openalex.py  wikipedia.py
