[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodic-pipeline"
version = "0.9.0"
description = "Multi-agent AI pipeline that transforms random noise into emergent research ideas through recursive critique and synthesis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ERGODIC Contributors"},
]
keywords = [
    "research", "ideation", "multi-agent", "AI", "LLM",
    "emergent", "recursive", "brainstorming", "pipeline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
ergodic = "ergodic.cli:main"

[project.urls]
Homepage = "https://github.com/SOCIALPINE/ergodic-pipeline"
Documentation = "https://github.com/SOCIALPINE/ergodic-pipeline#readme"
Repository = "https://github.com/SOCIALPINE/ergodic-pipeline"
Issues = "https://github.com/SOCIALPINE/ergodic-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
